# servo

./: .gitignore  .servobuild  Cargo.toml
.cargo/: config
.github/workflows/: main.yml
components/allocator/: Cargo.toml  lib.rs
components/background_hang_monitor/: Cargo.toml  background_hang_monitor.rs
components/bluetooth/: Cargo.toml  lib.rs
components/bluetooth_traits/: Cargo.toml  lib.rs
components/canvas/: Cargo.toml  canvas_paint_thread.rs  webgl_thread.rs
components/canvas/webgl_mode/: inprocess.rs
components/canvas_traits/: Cargo.toml  lib.rs
components/canvas_traits/webgl_channel/: mod.rs  (+1 more)
components/compositing/: Cargo.toml  compositor.rs  compositor_thread.rs
components/config/: basedir.rs  opts.rs
components/constellation/: Cargo.toml  constellation.rs  network_listener.rs  pipeline.rs  sandboxing.rs
components/devtools/: Cargo.toml
components/devtools_traits/: Cargo.toml
components/domobject_derive/: lib.rs
components/embedder_traits/: Cargo.toml
components/gfx/: Cargo.toml  font_cache_thread.rs
components/layout/: Cargo.toml  query.rs
components/layout_2020/: Cargo.toml  positioned.rs  replaced.rs
components/layout_thread/: Cargo.toml  lib.rs
components/layout_thread_2020/: Cargo.toml  lib.rs
components/layout_traits/: Cargo.toml
components/malloc_size_of/: Cargo.toml
components/media/: Cargo.toml
components/metrics/: Cargo.toml
components/msg/: Cargo.toml
components/net/: Cargo.toml  connector.rs  cookie.rs  cookie_storage.rs  filemanager_thread.rs  hsts.rs  http_loader.rs  image_cache.rs  resource_thread.rs  storage_thread.rs
components/net_traits/: Cargo.toml  lib.rs  request.rs
components/profile/: Cargo.toml  mem.rs  time.rs
components/profile_traits/: Cargo.toml
components/script/: Cargo.toml  document_loader.rs  microtask.rs  network_listener.rs  script_runtime.rs  script_thread.rs
components/script_layout_interface/: Cargo.toml
components/script_traits/: Cargo.toml  lib.rs
components/servo/: Cargo.toml  lib.rs
components/style/: driver.rs  global_style_data.rs  parallel.rs  scoped_tls.rs
components/url/: lib.rs
components/webdriver_server/: Cargo.toml
components/webgpu/: Cargo.toml
ports/winit/: Cargo.toml  app.rs
python/servo/: command_base.py
resources/: prefs.json
(+36 files in other folders)
